@startuml
'https://plantuml.com/class-diagram

interface AbstractFactory {
    CreateProduct() AbstractProduct
}
interface AbstractProduct{
    GetName() string
}
class ConcreteFactory {
    CreateProduct() AbstractProduct
}
class ConcreteProduct {
    GetName() string
}

AbstractFactory <|.. ConcreteFactory
AbstractProduct <|.. ConcreteProduct
ConcreteProduct <.. ConcreteFactory

@enduml
